--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <groupId>SampleMicroserviceProject</groupId>
     <artifactId>user-service</artifactId>
     <name>userService</name>
+    <version>1.0-SNAPSHOT</version>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
@@ -12,8 +14,28 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
+        <spring.boot.maven.plugin.version>2.7.0</spring.boot.maven.plugin.version>
+        <spring.boot.dependencies.version>2.7.0</spring.boot.dependencies.version>
+        <spring.cloud.version>2021.0.3</spring.cloud.version>
     </properties>
-
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.dependencies.version}</version>
+                <scope>import</scope>
+                <type>pom</type> <!-- Bunun sayesinde bu dependency'leri diğer modullerde kullanabileceğiz -->
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud.version}</version>
+                <scope>import</scope>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
