modify eureka config

--- a/src/main/resources/application-k8s.properties
+++ b/src/main/resources/application-k8s.properties
@@ -7,4 +7,4 @@ server.port=8080
 spring.zipkin.base-url=http://zipkin.zipkin:9411
 eureka.client.serviceUrl.defaultZone=http://eureka:password@dev-eureka-server:8761/eureka
 eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=${spring.application.name}
+eureka.instance.hostname=dev-user-service
