--- a/src/main/resources/application-k8s.properties
+++ b/src/main/resources/application-k8s.properties
@@ -6,3 +6,4 @@ spring.data.mongodb.password=rootpass
 server.port=8080
 spring.zipkin.base-url=http://zipkin.zipkin:9411
 eureka.client.serviceUrl.defaultZone=http://eureka:password@dev-eureka-server:8761/eureka
+eureka.client.enabled=false
