--- a/src/main/resources/application-k8s.properties
+++ b/src/main/resources/application-k8s.properties
@@ -1,9 +1,20 @@
-spring.data.mongodb.host=mongodb.mongo
-spring.data.mongodb.port=27017
+#spring.data.mongodb.host=mongodb-mongodb-sharded.mongo
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.authentication-database=admin
+#spring.data.mongodb.database=user
+#spring.data.mongodb.username=rootuser
+#spring.data.mongodb.password=rootpass
+
+spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=user
-spring.data.mongodb.username=rootuser
-spring.data.mongodb.password=rootpass
+spring.data.mongodb.uri=mongodb://rootuser:rootpass@mongodb-mongodb-sharded.mongo:27017
 server.port=8080
 spring.zipkin.base-url=http://zipkin.zipkin:9411
 eureka.client.serviceUrl.defaultZone=http://eureka:password@dev-eureka-server:8761/eureka
 eureka.client.enabled=false
+
+spring.rabbitmq.host=rabbitmq.rabbitmq
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=user
+spring.rabbitmq.password=test
+spring.rabbitmq.listener.direct.acknowledge-mode=manual
