--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,20 +9,29 @@ spring:
   ## MongoDB Properties
   data:
     mongodb:
-      authentication-database: admin
-      username: rootuser
-      password: rootpass
+#      authentication-database: admin
+#      username: rootuser
+#      password: rootpass
       database: user
-      port: 27017
-      host: localhost
-      auto-index-creation: true
+#      port: 27017
+#      host: localhost
+      authentication-database: admin
+      uri: mongodb://rootuser:rootpass@localhost:27017
+      auto-index-creation: false # 몽고DB 인덱스 자동생성으로 Duplicate error 발생 방지
   ## Zipkin and Sleuth Properties
   zipkin:
     base-url: http://localhost:9411
   sleuth:
     sampler:
       probability: 1.0
-
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: user
+    password: test
+    listener:
+      direct:
+        acknowledge-mode: manual
 ## Eureka Properties
 eureka:
   client:
@@ -35,6 +44,32 @@ eureka:
 jwt:
   secret:
     key: secret_secret_secret_secret_secret_secret_secret_secret_secret_secret
+
+amqp:
+  bindings:
+    -
+      exchange: user.events
+      routingKey: user.created
+      queue: user.created.comment-service
+    -
+      exchange: comment.events
+      routingKey: comment.failed
+      queue: comment.failed.user-service
+    -
+      exchange: comment.events
+      routingKey: comment.completed
+      queue: comment.created.user-service
+
+  queues:
+    user_created: user.created.comment-service
+    comment_failed: comment.failed.user-service
+    comment_created: comment.created.user-service
+
+  routingKey:
+    user_created_events: user.created
+
+  exchange:
+    user_events: user.events
 
 logging:
   level:
